# aft

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  STRUCTURE.md  biome.json  package.json  tsconfig.base.json
crates/aft/: Cargo.toml  build.rs
crates/aft-tokenizer/: Cargo.toml  build.rs
crates/aft-tokenizer/benches/: perf.rs
crates/aft-tokenizer/examples/: count_stdin.rs
crates/aft-tokenizer/src/: claude.rs  claude_data.rs  lib.rs
crates/aft-tokenizer/tests/: parity.rs  snapshot_corpus.json
crates/aft/examples/: export_chunks.rs
crates/aft/src/: ast_grep_hints.rs  ast_grep_lang.rs  backup.rs  cache_freshness.rs  callgraph.rs  calls.rs  checkpoint.rs  config.rs  config_resolve.rs  context.rs  edit.rs  error.rs  extract.rs  format.rs  fs_lock.rs  fuzzy_match.rs  go_helper.rs  go_overlay.rs  grep_executor.rs  harness.rs  imports.rs  indent.rs  language.rs  lib.rs  local_embed.rs  log_ctx.rs  lsp_hints.rs  main.rs  migrate_storage.rs  output.rs  parse_cache.rs  parser.rs  pattern_compile.rs  persistent_cache.rs  protocol.rs  pty_render.rs  query_shape.rs  readonly_artifacts.rs  response_finalize.rs  run_tool_call.rs  (+15 more)
crates/aft/src/bash_background/: buffer.rs  mod.rs  output.rs  persistence.rs  process.rs  pty_process.rs  pty_runtime.rs  registry.rs  watchdog.rs  watches.rs
crates/aft/src/bash_permissions/: mod.rs  scan.rs
crates/aft/src/bash_rewrite/: dispatch.rs  footer.rs  rules.rs
crates/aft/src/callgraph_store/: dead_code_projection.rs  mod.rs
crates/aft/src/cli/: warmup.rs
crates/aft/src/commands/: add_decorator.rs  add_derive.rs  add_import.rs  add_member.rs  add_struct_tags.rs  apply_patch.rs  ast_replace.rs  ast_scope.rs  ast_search.rs  bash.rs  bash_drain_completions.rs  bash_kill.rs  bash_notify.rs  bash_orchestrate.rs  bash_promote.rs  bash_regex_match.rs  bash_status.rs  bash_write.rs  batch.rs  call_tree.rs  callers.rs  callgraph_store_adapter.rs  checkpoint.rs  configure.rs  conflicts.rs  delete_file.rs  dispatched_by.rs  dispatches.rs  edit_history.rs  edit_match.rs  edit_symbol.rs  extract_function.rs  glob.rs  go_overlay_session.rs  grep.rs  impact.rs  implementations.rs  inline_symbol.rs  inspect.rs  list_checkpoints.rs  (+33 more)
crates/aft/src/compress/: biome.rs  builtin_filters.rs  bun.rs  cargo.rs  eslint.rs  generic.rs  git.rs  go.rs  mod.rs  mypy.rs  next.rs  npm.rs  playwright.rs  pnpm.rs  prettier.rs  pytest.rs  ruff.rs  toml_filter.rs  tree.rs  trust.rs  tsc.rs  vitest.rs
crates/aft/src/db/: backups.rs  bash_tasks.rs  compression_events.rs  mod.rs  state.rs
crates/aft/src/executor/: mod.rs  single_flight.rs  tests.rs
crates/aft/src/imports/: c.rs  csharp.rs  java.rs  kotlin.rs  lua.rs  mod.rs  perl.rs  php.rs  ruby.rs  scala.rs  swift.rs
crates/aft/src/inspect/: cache.rs  diagnostics_category.rs  dispatch.rs  entry_points.rs  frameworks.rs  freshness.rs  job.rs  manager.rs  mod.rs  tier2_scheduler.rs
crates/aft/src/lsp/: client.rs  diagnostics.rs  document.rs  environmental.rs  manager.rs  mod.rs  position.rs  pull_params.rs  registry.rs  roots.rs  transport.rs  tsconfig_membership.rs
crates/aft/src/migrate_storage/: log.rs
crates/aft/src/patch/: apply.rs  mod.rs  parser.rs
crates/aft/tests/: callgraph_store_test.rs  compress_spike.rs  file_summary_chunks_test.rs  lsp_registry_test.rs  lsp_transport_test.rs  semantic_disk_test.rs  semantic_refresh_test.rs  semantic_validation_test.rs
crates/aft/tests/fixtures/: ambiguous.ts  calls.ts  git_log_deep_needle.txt  imports_js.js  imports_ts.ts  member_py.py  member_ts.ts  sample.go  sample.js  sample.py  sample.rs  sample.ts  sample.tsx  sample_vars.go  structure_go.go  structure_py.py  structure_rs.rs
crates/aft/tests/helpers/: mod.rs
crates/aft/tests/integration/: aft_search_contract_test.rs  ast_commands_test.rs  backups_dual_write_test.rs  bash_background_persistence_test.rs  bash_background_test.rs  bash_compress_extras_test.rs  bash_drain_completions_test.rs  bash_foreground_background_architecture_test.rs  bash_orchestrate_test.rs  bash_permissions_test.rs  bash_pty_test.rs  bash_rewrite_test.rs  bash_tasks_dual_write_test.rs  bash_test.rs  bash_token_count_test.rs  bash_watch_test.rs  bash_windows_test.rs  callgraph_store_name_match_test.rs  callgraph_test.rs  checkpoint_metadata_test.rs  commands_test.rs  compress_cli_commands_test.rs  compress_filters_test.rs  compress_output_shape_test.rs  compression_events_test.rs  config_parity_test.rs  configure_test.rs  conflicts_discovery_test.rs  db_read_fallback_test.rs  (+81 more)
(+845 files in other folders)
