[package]
name = "aft-tokenizer"
version = "0.33.0"
edition = "2021"
description = "Claude lookup-encoding tokenizer for Agent File Tools"
license = "MIT"

[dependencies]
fancy-regex = "0.18"

[build-dependencies]
regex = "1"

[dev-dependencies]
criterion = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "perf"
harness = false
