[package]
name = "aft"
version = "0.1.0"
edition = "2021"
description = "Agent File Tools — tree-sitter powered code analysis for AI agents"
license = "MIT"
repository = "https://github.com/nichochar/opencode-sfm"
keywords = ["tree-sitter", "code-analysis", "ai-agent", "ast"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "aft"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.26"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-md = "0.5"
similar = "2"
streaming-iterator = "0.1"
ignore = "0.4"
notify = "8"
unescaper = "0.1.8"

[dev-dependencies]
tempfile = "3"
